Bug 196834 all bookmarks lost when using "browser.bookmarks.file" pref and switching profile r=ccarlen sr=alecf